feat(junit5): detect interrupted test runs and add cross-reporter integration
Adds interrupted-run detection to the JUnit5 reporter by tracking expected
vs recorded test counts, and integrates it with the rspec cross-reporter
integration spec.

Key behaviors:
- expectedCount seeded from TestPlan at discovery time
- dynamicTestRegistered grows expectedCount for @TestFactory and (on
  Jupiter 5.11+) @ParameterizedTest / @RepeatedTest invocations; keeps
  recordedCount from overrunning expectedCount on a completed dynamic run
- executionSkipped on a container walks descendants to record them as
  skipped, so @Disabled classes do not falsely report "interrupted"
- executionFinished ABORTED on a container marks the count untrustworthy
  for the rest of the run (mirrors minitest returning expected_count=0);
  walking descendants would fabricate outcomes the platform never assigned

Reason precedence: failed > interrupted > passed.

Also:
- LauncherIntegrationTest covers the three platform-specific behaviors
  (disabled class, dynamic tests, aborted container) that unit tests
  cannot exercise without assuming platform API behaviour
- TddGuardListenerTest adds a truncated-dynamic case that depends on
  the dynamicTestRegistered increment (would pass without it if the
  fixture had no static tests and expectedCount stayed 0)
- rspec interrupted_integration_spec.rb moves rspec's genuine
  interruption (RSpec.world.wants_to_quit) into a dedicated integration
  spec following unhandled_errors_integration_spec.rb conventions
- bundle binary comment corrected in minitest.ts and rspec.ts